--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html />
 <html lang="en" />
 
-	<!-- Week 1 of Coding Bootcamp assignment -->
+
 
 <head>
 
@@ -11,7 +11,7 @@
 	<meta name="description" content="Comment on articles from your favorite news site." />
     <meta name="author" content="Sarah Riehl" />
 
-	<title>Opinionator</title>
+	<title>Dailykos</title>
 	<link rel="icon" type="image/png" href="img/favicon.png" />
 
 	<!-- bootstrap -->
@@ -28,7 +28,7 @@
 <div class="container-fluid jumbotron">
 	<div class="row">
 		<div class="col col-sm-12 col-title">
-			<h1>the Opinionator</h1>
+			<h1>the Dailykos</h1>
 			<p>record your opinions on the reporting style of the news of the day</p>
 
 		</div><!-- /col-title -->
